Attempt to fix global nav on iPhone5.

--- a/app/assets/stylesheets/reimagine2/devpost/_global_nav_bar.sass
+++ b/app/assets/stylesheets/reimagine2/devpost/_global_nav_bar.sass
@@ -218,7 +218,8 @@
 
     .toggle-topbar
       float: right !important
-      margin-right: 10px
+      @media (min-width: 330px)
+        margin-right: 10px
 
       a
         height: 50px
